# business/product/swagger-product.yaml
@@ -48,38 +48,6 @@ paths:
       - productstore_auth:
         - "write:product"
         - "read:product"
-    put:
-      tags:
-      - "product"
-      summary: "Update an existing product"
-      description: ""
-      operationId: "updateProduct"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "body"
-        description: "Product object that needs to be added to the store"
-        required: true
-        schema:
-          $ref: "#/definitions/Product"
-      responses:
-        "200":
-          description: "Succesfull operation"
-          schema: 
-            $ref: "#/definitions/ApiResponse"
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "Product not found"
-        "405":
-          description: "Validation exception"
-      security:
-      - productstore_auth:
-        - "write:product"
-        - "read:product"
   /product/findByCategory:
     get:
       tags:
@@ -175,7 +143,7 @@ paths:
           description: "Product not found"
       security:
       - api_key: []
-    post:
+    put:
       tags:
       - "product"
       summary: "Updates a product in the store with form data"
@@ -186,32 +154,12 @@ paths:
       produces:
       - "application/json"
       parameters:
-      - name: "productId"
-        in: "path"
-        description: "ID of product that needs to be updated"
+      - in: "body"
+        name: "body"
+        description: "Product object that needs to be added to the store"
         required: true
-        type: "integer"
-        format: "int64"
-      - name: "name"
-        in: "formData"
-        description: "Updated name of the product"
-        required: false
-        type: "string"
-      - name: "description"
-        in: "formData"
-        description: "Updated description of the product"
-        required: false
-        type: "string"
-      - name: "stock"
-        in: "formData"
-        description: "Updated stock of the product"
-        required: false
-        type: "integer"
-      - name: "price"
-        in: "formData"
-        description: "Updated price of the product"
-        required: false
-        type: "integer"
+        schema:
+          $ref: "#/definitions/Product"
       responses:
         "405":
           description: "Invalid input"
@@ -316,8 +264,8 @@ definitions:
       id:
         type: "integer"
         format: "int64"
-      category:
-        type: "array"
+      category_id:
+        type: "integer"
         items: 
          $ref: "#/definitions/Category"
       name:
@@ -334,7 +282,7 @@ definitions:
         format: "int64"
         example: 200000
       photo_urls:
-        type: "array"
+        type: "string"
         items:
           type: "string"
       status:
